# LLM_android_testbench

./: .gitignore  README.md
llm-smartphones-bench/: LICENSE
llm-smartphones-bench/analysis-data/: data.xlsx
llm-smartphones-bench/analysis-utils/: .gitignore  README.md  data_aggregator.py  plots_maker.py  pyproject.toml  r2_downloader.py  utils.py  wandb_downloader.py
llm-smartphones-bench/executorch-app/app/: build.gradle.kts
llm-smartphones-bench/executorch-app/docs/delegates/: xnnpack_README.md
llm-smartphones-bench/executorch-app/gradle/wrapper/: gradle-wrapper.properties
llm-smartphones-bench/llamarn-app/: .eslintrc.js  App.tsx  README.md  app.json  build-release-apk.sh  metro.config.js  package-lock.json  package.json
llm-smartphones-bench/llamarn-app/android/: settings.gradle
llm-smartphones-bench/llamarn-app/android/app/: build.gradle  proguard-rules.pro
llm-smartphones-bench/llamarn-app/ios/: Podfile
llm-smartphones-bench/llamarn-app/ios/LLmQuantBench/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
llm-smartphones-bench/llamarn-app/ios/LLmQuantBench.xcodeproj/: project.pbxproj
llm-smartphones-bench/llamarn-app/src/: checkInternetConnection.ts  colors.ts  config.ts  fsUtils.ts  metrics.ts  modelFilter.ts  models.ts
llm-smartphones-bench/llamarn-app/src/contexts/: ConfigContext.tsx  (+4 more)
llm-smartphones-bench/r2-worker/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
llm-smartphones-bench/r2-worker/src/: index.ts
test/android/: README.md
test/android/MLCChat/: build.gradle  mlc-package-config.json
(+66 files in other folders)
