[project]
name = "mgr-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aquarel>=0.0.7",
    "boto3>=1.40.21",
    "cairosvg>=2.7.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "wandb>=0.21.2",
]
